Fix for UCAS Teacher Training They use 80-char lines there instead of UCAS Undergrad's 94

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ redirect_from:
 <html>
 <!--
 UCAS Personal Statement Word Counter
-Copyright (c) 2014-2016 Adrian Iain Lam
+Copyright (c) 2014-2018 Adrian Iain Lam
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -71,6 +71,15 @@ Contact: <ail30@cam.ac.uk>
           (For readability purpose only. Will NOT be present in the UCAS
           submission)
         </span>
+      <br />
+      <input id="teacher" type="checkbox" onclick="analyse()">
+        Teacher Training
+        <br />
+        <span class="note">
+          (UCAS Teacher Training uses a different counting method. Check
+          this box if you are applying for Teacher Training. Leave blank
+          for undergraduate application.)
+        </span>
       <div id="stats" class="topPadding">
         <div id="statLines">Lines: 0/47</div>
         <div id="statChars">Characters: 0/4000</div>
@@ -83,7 +92,7 @@ Contact: <ail30@cam.ac.uk>
         &lt;<a href="mailto:ail30@cam.ac.uk">ail30@cam.ac.uk</a>&gt;.
       </address>
       <footer>
-        <p>Copyright &copy; 2014-2016 Adrian Iain Lam</p>
+        <p>Copyright &copy; 2014-2018 Adrian Iain Lam</p>
         <p>
           This program is free software, and you are welcome to redistribute it
           under the terms of the GNU GPL. This program comes with ABSOLUTELY NO
