--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ redirect_from:
 <html>
 <!--
 UCAS Personal Statement Word Counter
-Copyright (c) 2014-2018 Adrian Iain Lam
+Copyright (c) 2014-2019 Adrian Iain Lam
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@ GNU General Public License for more details.
 A copy of the GNU General Public License can be found at
 <http://www.gnu.org/licenses/gpl.html>.
 
-Contact: <ail30@cam.ac.uk>
+Contact: See <https://adrianiainlam.tk/contact>.
 -->
 <head>
   <title>UCAS Personal Statement Line &amp; Character Counter</title>
@@ -88,11 +88,12 @@ Contact: <ail30@cam.ac.uk>
         </div>
       </div>
       <address>
-        Found a bug? Please report to
-        &lt;<a href="mailto:ail30@cam.ac.uk">ail30@cam.ac.uk</a>&gt;.
+        Found a bug? Please report on
+        <a href="https://github.com/adrianiainlam/ucas-personal-statement-counter">GitHub</a>, or
+        <a href="https://adrianiainlam.tk/contact">contact me</a>.
       </address>
       <footer>
-        <p>Copyright &copy; 2014-2018 Adrian Iain Lam</p>
+        <p>Copyright &copy; 2014-2019 Adrian Iain Lam</p>
         <p>
           This program is free software, and you are welcome to redistribute it
           under the terms of the GNU GPL. This program comes with ABSOLUTELY NO
